# nimify-anything

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc.json  .secrets.baseline  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_RESEARCH_FINDINGS.md  BACKLOG.md  CHANGELOG.md  CI_CD_SETUP.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  Dockerfile.production-multi  Dockerfile.security-hardened  ENHANCEMENT_SUMMARY.md  EXECUTION_SUMMARY.md  Makefile  NIMIFY_SDLC_COMPLETE.md  PRODUCTION_READY.md  PROJECT_CHARTER.md  README.md  README_BIONEURO.md  RESEARCH_PUBLICATION.md  SBOM.json  SECURITY.md  autonomous_quality_gates_report.json  (+40 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.terragon/: AUTONOMOUS_SDLC_SUMMARY.md  autonomous-executor.py  config.yaml  value-discovery.py
demo-service-chart/: Chart.yaml  values.yaml
demo-service-chart/templates/: deployment.yaml
deployment/: deployment_report.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INCIDENT_RESPONSE.md  PERFORMANCE.md  ROADMAP.md  RUNBOOKS.md  SUPPLY_CHAIN_SECURITY.md
docs/adr/: 0001-use-nvidia-nim-runtime.md  0002-triton-inference-server.md  0003-kubernetes-first-deployment.md  README.md
docs/deployment/: container-build.md
docs/guides/: README.md
docs/runbooks/: README.md  alert-response.md  service-outage.md
docs/testing/: README.md
docs/workflows/: GITHUB_ACTIONS_SETUP.md  SETUP_REQUIRED.md  WORKFLOW_SETUP.md  advanced-ci-cd.md  ci-cd-setup.md  github-actions-setup.md  github-actions.md  production-workflows.md
global_validation_results/: deployment_validation.json  load_test_results.json
invalid name with spaces-chart/: Chart.yaml  values.yaml
invalid name with spaces-chart/templates/: deployment.yaml
kubernetes/: production-deployment.yaml
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  otel-collector-config.yml  prometheus.yml
monitoring/dashboards/: nimify-overview.json
nimify-anything-production-deployment/docker/: .dockerignore  Dockerfile  docker-compose.yml
nimify-anything-production-deployment/docs/: README.md  runbook.md
nimify-anything-production-deployment/scripts/: build.sh  deploy.sh  health-check.sh
nimify-production-chart/: Chart.yaml  values.yaml
nimify-production-chart/templates/: deployment.yaml
quality_gates_results/: quality_gates_report.json  quality_summary.txt
scripts/: build-container.sh  compare-benchmarks.py  compliance-check.py  entrypoint.sh  generate-sbom.sh  performance-benchmark.py  performance-health-check.py  performance-trends.py  security-scan.py  setup-dev.sh
src/nimify/: __init__.py  adaptive_fusion_research.py  admin_api.py  advanced_cli.py  advanced_monitoring.py  advanced_security.py  api.py  auto_scaler.py  autonomous_quality_gates.py  autonomous_research_agent.py  caching_system.py  circuit_breaker.py  cli.py  comprehensive_benchmarking.py  core.py  deployment.py  enhanced_cli.py  enhanced_error_handling.py  ensemble.py  error_handling.py  fusion_engine.py  generator.py  global_deployment.py  global_orchestrator.py  inspector.py  intelligent_scaling.py  logging_config.py  model_analyzer.py  monitoring.py  neural_architecture_search.py  neural_processor.py  olfactory_analyzer.py  optimization.py  optimized_api.py  performance.py  performance_optimization.py  performance_optimizer.py  production_deployment.py  quantum_enhanced_optimization.py  quantum_neural_optimizer.py  (+13 more)
test-service-chart/: Chart.yaml  values.yaml
test-service-chart/templates/: deployment.yaml
tests/: __init__.py  config_examples.py  conftest.py  test_advanced_features.py  test_advanced_quality_gates.py  test_api.py  test_autonomous_research.py  test_bioneuro_fusion.py  test_cli.py  test_core.py  test_fixtures.py  test_generators.py  test_inspector.py  test_model_analyzer.py  test_performance_benchmarks.py  test_research_integration.py  test_security.py  test_validation.py  utils.py
tests/e2e/: __init__.py
tests/fixtures/: README.md
tests/integration/: __init__.py  conftest.py
tests/performance/: __init__.py  conftest.py  test_benchmarks.py  (+1 more)
(+59 files in other folders)
