[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimify-anything"
version = "0.2.0"
description = "CLI that wraps any ONNX model into an NVIDIA NIM-style microservice"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Daniel Schmidt"}]
requires-python = ">=3.10"
keywords = ["nvidia", "nim", "onnx", "microservice", "inference", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "prometheus-client>=0.20",
]
onnx = [
    "onnx>=1.14",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "black>=23",
    "ruff>=0.1",
    "mypy>=1",
]

[project.scripts]
nimify = "nimify.cli:main"

[project.urls]
Homepage = "https://github.com/danieleschmidt/nimify-anything"
Repository = "https://github.com/danieleschmidt/nimify-anything"
Issues = "https://github.com/danieleschmidt/nimify-anything/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
